--- a/index.html
+++ b/index.html
@@ -78,5 +78,6 @@
         <div id="footer">
             <p>&copy; 20xx ○○ All Rights Reserved.</p>
         </div>
+        <audio src="スピリチュアル音楽.mp3" controls></audio>
     </body>
 </html> 
